--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: #2f3542;
+    background-color: #2f3542 !important;
 }
 
 h1{
-  color: white;
+  color: white !important;
 }
 
 .grid-container {
@@ -17,7 +17,7 @@ h1{
   
   .gridBox {
   
-    border: 3px solid white;
+    border: 3px solid white !important;
     height: 150px;
     width: 150px;
   }
@@ -27,7 +27,7 @@ h1{
   }
 
   h2{
-    color: white;
+    color: white !important;
   }
 
   #playAgain{
